makes fileloader work